<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Tiki-Taka</string>


    <!--item_chatting.xml-->
    <string name="friend_name">Leo</string>
    <string name="friend_chat_content">Me too :)</string>

    <!--fragment_new_matching_dialog.xml-->
    <string name="dialog_friend_name">Leo</string>
    <string name="dialog_friend_hobby1">#basketball🏀</string>
    <string name="dialog_friend_hobby2">#Korean</string>
    <string name="dialog_friend_hobby3">#active</string>
    <string name="dialog_friend_hobby4">#coding</string>


    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>